--- a/src/App.css
+++ b/src/App.css
@@ -27,16 +27,18 @@
 
 .List {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
 }
 
 .List-Item {
   padding: 10px;
-  display: flex;
+  /*display: flex;
   text-align: left;
-  align-items: flex-end;
+  align-items: flex-end;*/
   width: 25%;
+  float: left;
   background: rgb(0, 0, 0);
   background: linear-gradient(
     to right,
